Fix magin-bottom, white space from footer and main menu 360px

--- a/css/style_webmoderna_v2.css
+++ b/css/style_webmoderna_v2.css
@@ -669,9 +669,6 @@ body{
 .footer .social a:hover{
     padding:.52rem 1.56rem;
 }
-@media only screen and (max-width:480px){
-
-}
 @media only screen and (max-width:768px){
     .menu .logo-box h1 a {
         font-size: 1em;
@@ -708,7 +705,7 @@ body{
         display: block;
     }
     .menu .logo-box h1 a {
-        font-size: 2.5rem;
+        font-size: 1.2em;
     }
     .burger-menu > .fa-bars{
         display: block;
@@ -830,6 +827,7 @@ body{
     }
     .footer {
         flex-wrap: wrap;
+        height: auto;
     }
     .footer .social {
         left: -5%;
@@ -865,6 +863,8 @@ body{
         height: auto;
         margin: auto;
         text-align: center;
+        border-top: 0px;
+        margin-top: 1rem;
     }
     .footer .footer-content .footer-text p{
         font-size: 0.8rem;
